--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700&display=swap"
     />
+    <link rel="icon" type="image/png" href="/logo.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
